<resources>
    <string name="app_name" translatable="false">MentalCounting</string>

    <!-- Activity main -->
    <string name="games">game</string>
    <string name="previous">Previous</string>

    <!-- Game menu -->
    <string name="home">Home</string>
    <string name="results">Result</string>
    <string name="clean">Clean</string>

    <!-- Previous menu -->
    <string name="previous_button">Previous</string>

    <!-- Activity game -->
    <string name="calcul">Calculation : </string>
    <string name="operation_template" translatable="false">%1$d %2$s %3$d</string>
    <string name="reponse">Answer : </string>
    <string name="bravo">Congrate</string>
    <string name="rate">Failure : </string>
    <string name="valider">Validate</string>
    <string name="new_operation">New operation</string>

    <!-- Activity result -->
    <string name="dernier_calcul">Last calculation : 5+3=8</string>
    <string name="reussites">89% success</string>
    <string name="calculs">110 calculation</string>

</resources>